--- a/stylesheet.css
+++ b/stylesheet.css
@@ -627,7 +627,7 @@ pre tt:after {
 .container {
   position: relative;
   margin: 0 auto;
-  max-width: 992px;
+  max-width: 680px; /* For typograpy! */
   padding: 0px 1.0875rem 1.45rem;
   padding-top: 0;
 }
